--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,4 +4,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: ''
+      - name: Get Code
+        uses: actions/checkout@v3
+      - name: Install NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm test
